k8s/local/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-core
spec:
  template:
    spec:
      containers:
        - name: ng-core
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
