k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ng-core
  namespace: ng-core
  labels:
    app: ng-core
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ng-core.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ng-core
                port:
                  number: 80
